# RootLink

./: .gitignore  .graphifyignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  TECH_DEBT.md  fix_dark_mode.js  reset_admin.py  rootlink-design-mockup.html  scan_and_fix.js  setup_stripe.sh  skills-lock.json  vercel.json
rootlink/backend/: .dockerignore  .env.example  =8.0.0  Dockerfile  Dockerfile.prod  pyproject.toml  requirements-prod.txt  requirements.txt
rootlink/backend/alembic/: env.py
rootlink/backend/app/: main.py
rootlink/backend/crawler/: settings.py
rootlink/backend/scripts/: anchor_articles.py  seed_articles.py  seed_calendar.py  seed_plants.py  seed_urls.json
rootlink/backend/tests/: conftest.py  test_admin_feeds.py  test_article_review_approve.py  test_blocks.py  test_comment_edit.py  test_compost_hub_management.py  test_content_ui.py  test_copy.py  test_element_catalog.py  test_entity_member_admin_actions.py  test_entity_notify_members.py  test_event_archive.py  test_groups_manage.py  test_marketplace_manage_any.py  test_overrides.py  test_permissions_registry.py  test_permissions_registry_endpoint.py  test_phase0_enforcement.py  test_phase1_lifecycle.py  test_phase1_migration.py  test_phase1_roles_migration.py  test_phase2_auth_security.py  test_phase2_media.py  test_phase2_sessions.py  test_phase3_entity_resolution.py  test_phase3_rank_at_least.py  test_phase3_templates.py  test_phase4_trust_enforcement.py  test_phase5_views.py  test_phase6_account.py  test_roles_decisions_entity_conversion_v2.py  (+16 more)
(+491 files in other folders)
