[project]
name = "rootlink-backend"
version = "0.1.0"
description = "RootLink backend — community platform for gardeners, makers & homesteaders"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["B008", "B904", "E501", "N806", "N812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
